<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_heart_pulse"
            android:title="@string/heart_monitor_menu" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_location_pin"
            android:title="@string/location_menu" />
        <item
            android:id="@+id/nav_whitelists"
            android:icon="@drawable/ic_user"
            android:title="@string/whitelist_menu" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history_menu" />
    </group>

    <item android:title="@string/title_item">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings_menu" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
